// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Snapshots tests should match snapshot 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion"
        data-accordion-component="Accordion"
      >
        <div
          aria-controls="collapsible-1661419668701"
          aria-expanded="false"
          class="header"
          data-accordion-component="AccordionItemButton"
          role="button"
          tabindex="0"
        >
          title
          <div
            class="headerArrow"
          >
            <svg
              aria-hidden="true"
              class="svgIcon inherit"
              data-test-id="ChevronDownIcon"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          aria-labelledby="collapsible-1661419668701"
          class="collapse body"
          data-accordion-component="AccordionItemPanel"
          id="collapsible-1661419668701"
          role="region"
          style="height: 0px;"
        >
           You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion"
      data-accordion-component="Accordion"
    >
      <div
        aria-controls="collapsible-1661419668701"
        aria-expanded="false"
        class="header"
        data-accordion-component="AccordionItemButton"
        role="button"
        tabindex="0"
      >
        title
        <div
          class="headerArrow"
        >
          <svg
            aria-hidden="true"
            class="svgIcon inherit"
            data-test-id="ChevronDownIcon"
            focusable="false"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        aria-labelledby="collapsible-1661419668701"
        class="collapse body"
        data-accordion-component="AccordionItemPanel"
        id="collapsible-1661419668701"
        role="region"
        style="height: 0px;"
      >
         You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion Snapshots tests should render accordion \`disabled\` 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion"
        data-accordion-component="Accordion"
      >
        <div
          aria-controls="collapsible-1661419668701"
          aria-expanded="false"
          class="header headerDisabled"
          data-accordion-component="AccordionItemButton"
          role="button"
          tabindex="-1"
        >
          title
          <div
            class="headerArrow"
          >
            <svg
              aria-hidden="true"
              class="svgIcon inherit"
              data-test-id="ChevronDownIcon"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          aria-labelledby="collapsible-1661419668701"
          class="collapse body"
          data-accordion-component="AccordionItemPanel"
          id="collapsible-1661419668701"
          role="region"
          style="height: 0px;"
        >
           You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion"
      data-accordion-component="Accordion"
    >
      <div
        aria-controls="collapsible-1661419668701"
        aria-expanded="false"
        class="header headerDisabled"
        data-accordion-component="AccordionItemButton"
        role="button"
        tabindex="-1"
      >
        title
        <div
          class="headerArrow"
        >
          <svg
            aria-hidden="true"
            class="svgIcon inherit"
            data-test-id="ChevronDownIcon"
            focusable="false"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        aria-labelledby="collapsible-1661419668701"
        class="collapse body"
        data-accordion-component="AccordionItemPanel"
        id="collapsible-1661419668701"
        role="region"
        style="height: 0px;"
      >
         You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion Snapshots tests should render accordion \`open=true\` by default 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion accordionOpen"
        data-accordion-component="Accordion"
      >
        <div
          aria-controls="collapsible-1661419668701"
          aria-expanded="true"
          class="header headerOpen"
          data-accordion-component="AccordionItemButton"
          role="button"
          tabindex="0"
        >
          title
          <div
            class="headerArrow"
          >
            <svg
              aria-hidden="true"
              class="svgIcon inherit"
              data-test-id="ChevronDownIcon"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          aria-labelledby="collapsible-1661419668701"
          class="collapse body"
          data-accordion-component="AccordionItemPanel"
          id="collapsible-1661419668701"
          role="region"
        >
           You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion accordionOpen"
      data-accordion-component="Accordion"
    >
      <div
        aria-controls="collapsible-1661419668701"
        aria-expanded="true"
        class="header headerOpen"
        data-accordion-component="AccordionItemButton"
        role="button"
        tabindex="0"
      >
        title
        <div
          class="headerArrow"
        >
          <svg
            aria-hidden="true"
            class="svgIcon inherit"
            data-test-id="ChevronDownIcon"
            focusable="false"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        aria-labelledby="collapsible-1661419668701"
        class="collapse body"
        data-accordion-component="AccordionItemPanel"
        id="collapsible-1661419668701"
        role="region"
      >
         You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Accordion Snapshots tests should render accordion title with HTML tag 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="accordion"
        data-accordion-component="Accordion"
      >
        <div
          aria-controls="collapsible-1661419668701"
          aria-expanded="false"
          class="header"
          data-accordion-component="AccordionItemButton"
          role="button"
          tabindex="0"
        >
          <h1>
            title
          </h1>
          <div
            class="headerArrow"
          >
            <svg
              aria-hidden="true"
              class="svgIcon inherit"
              data-test-id="ChevronDownIcon"
              focusable="false"
              style="font-size: 24px;"
              viewBox="0 0 24 24"
            >
              <path
                clip-rule="evenodd"
                d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
                fill-rule="evenodd"
              />
            </svg>
          </div>
        </div>
        <div
          aria-labelledby="collapsible-1661419668701"
          class="collapse body"
          data-accordion-component="AccordionItemPanel"
          id="collapsible-1661419668701"
          role="region"
          style="height: 0px;"
        >
           You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="accordion"
      data-accordion-component="Accordion"
    >
      <div
        aria-controls="collapsible-1661419668701"
        aria-expanded="false"
        class="header"
        data-accordion-component="AccordionItemButton"
        role="button"
        tabindex="0"
      >
        <h1>
          title
        </h1>
        <div
          class="headerArrow"
        >
          <svg
            aria-hidden="true"
            class="svgIcon inherit"
            data-test-id="ChevronDownIcon"
            focusable="false"
            style="font-size: 24px;"
            viewBox="0 0 24 24"
          >
            <path
              clip-rule="evenodd"
              d="M12.0711 14.7279L5.70718 8.36392L4.29297 9.77814L12.0711 17.5563L19.8493 9.77814L18.4351 8.36392L12.0711 14.7279Z"
              fill-rule="evenodd"
            />
          </svg>
        </div>
      </div>
      <div
        aria-labelledby="collapsible-1661419668701"
        class="collapse body"
        data-accordion-component="AccordionItemPanel"
        id="collapsible-1661419668701"
        role="region"
        style="height: 0px;"
      >
         You’ll struggle to find any objective reasons to buy a Q3 Sportback over the standard Audi Q3. But, if you want to stand out, the Sportback is
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
